# shift

./: .cursorrules  .gitignore  AGENT_ARCHITECTURE_SPEC.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_PLAN.md  DEVELOPMENT.md  IMPLEMENTATION_STATUS.md  INTERVENTION_POLLING_IMPLEMENTATION.md  LOCAL_TEST_RESULTS.md  MANUAL_HEALTHKIT_TEST_GUIDE.md  README.md  REFACTOR_PLAN.md  SESSION_SUMMARY.md  STATUS.md  TESTING.md  check_selector_logs.sh  clear_interventions.sh  clear_test_data.sh  create_test_intervention.sh  deploy.sh  getting_started_contract.json  load_intervention_catalog.sh  poll_pipeline.sh  test_adaptive_loop.sh  test_e2e_hrv.sh  test_pipeline.sh  test_pipeline_e2e.sh  test_suppression.sh  test_user_reset_endpoint.sh  trigger_state_estimate.sh
backend/: Dockerfile  auth_apple.py  auth_identity_platform.py  main.py  requirements.txt  schemas.py  test_identity_platform_token.py  test_mock_auth.py  users_repo.py
backend/services/: ingestion.py
docs/: README.md  SHIFT_DRAFT_Spec_Summary MVP V1 JX.docx  testing-strategy-rough-ideas.md
ios_app/: CHAT_UI_AUDIT.md  MANUAL_TEST_CHECKLIST.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE3_2_IMPLEMENTATION_SUMMARY.md  README.md  SHIFT_UI_UX_SPEC.md
pipeline/conversational_agent/: Dockerfile  README.md  __init__.py  agent.py  agent_service.py  auth.py  auth_identity_platform.py  deploy.sh  main.py  middleware.py  pyproject.toml  requirements.txt  schemas.py  user_context.py
pipeline/conversational_agent/tests/: __init__.py  conftest.py  test_agent.py  test_agent_service.py  test_api.py  test_tool_events.py  test_user_context.py
pipeline/intervention_selector/: README.md  http_handler.py  main.py  pyproject.toml  requirements.txt
pipeline/intervention_selector/src/: apns.py  bigquery_client.py  bucketing.py  catalog.py  selector.py
pipeline/watch_events/: ENDPOINT_FIX_SUMMARY.md  README.md  auth_apple.py  capture_error.sh  context_repository.py  main.py  pyproject.toml  requirements.txt  schemas.py  start_test_server.sh  test_endpoint_minimal.py  test_getting_started.py  test_reset_diagnostic.py  test_reset_endpoint.py  test_reset_local.sh  users_repo.py
pipeline/watch_events/services/: ingestion.py
pipelines/state_estimator/: README.md  pyproject.toml
pipelines/state_estimator/sql/: transform.sql
pipelines/state_estimator/src/repositories/: bigquery_repo.py
(+80 files in other folders)
